--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,8 +1,14 @@
 [ambari_config]
-ambari_server_host = 10.42.17.132
+ambari_server_host = 10.42.18.147
 ambari_server_port = 8080
 ambari_user = admin
-ambari_pass = nmoidu
+ambari_pass = aswarna
 ambari_server_timeout = 180
 cluster_name = c2219
 output_dir = ./output
+[hive_config]
+hive_metastore_type = mysql
+hive_metastore_server = 10.42.17.145
+hive_metastore_server_port = 3306
+hive_metastore_database_name = hive
+hive_metastore_database_password = hive_password
