--- a/conf/config.ini
+++ b/conf/config.ini
@@ -4,11 +4,12 @@ ambari_server_port = 8080
 ambari_user = admin
 ambari_pass = aswarna
 ambari_server_timeout = 180
-cluster_name = c2219
+cluster_name = c1296
 output_dir = ./output
 [hive_config]
 hive_metastore_type = mysql
 hive_metastore_server = 10.42.17.145
 hive_metastore_server_port = 3306
 hive_metastore_database_name = hive
+hive_metastore_database_user = hive
 hive_metastore_database_password = hive_password
