Added changes needed for hive_metastore_extractor

--- a/conf/config.ini
+++ b/conf/config.ini
@@ -1,14 +1,15 @@
 [ambari_config]
-ambari_server_host = 10.42.18.147
+ambari_server_host = 10.42.18.130
 ambari_server_port = 8080
 ambari_user = admin
 ambari_pass = aswarna
-ambari_server_timeout = 180
+ambari_http_protocol = http
+ambari_server_timeout = 5
 cluster_name = c1296
 output_dir = ./output
 [hive_config]
 hive_metastore_type = mysql
-hive_metastore_server = 10.42.17.145
+hive_metastore_server = 10.42.17.15
 hive_metastore_server_port = 3306
 hive_metastore_database_name = hive
 hive_metastore_database_user = hive
